// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: RadioButton should render a disabled radio button 1`] = `
<DocumentFragment>
  .c1 {
  opacity: 0;
  height: 0;
  width: 0;
  position: absolute;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  border: 2px solid hsl(0,0%,90%);
}

.c2:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  cursor: cursor;
}

.c0 input:checked ~ span {
  background-color: transparent;
}

.c0 input:checked ~ span:after {
  display: block;
}

.c0 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

<label
    class="c0"
    for="radio"
  >
    <input
      class="c1"
      disabled=""
      id="radio"
      name="test"
      type="radio"
    />
    <span
      aria-hidden="true"
      class="c2"
      disabled=""
    />
  </label>
</DocumentFragment>
`;

exports[`component: RadioButton should render a radio button 1`] = `
<DocumentFragment>
  .c1 {
  opacity: 0;
  height: 0;
  width: 0;
  position: absolute;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c2:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c0 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c0 input:checked ~ span:after {
  display: block;
}

.c0 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

<label
    class="c0"
    for="radio"
  >
    <input
      class="c1"
      id="radio"
      name="test"
      type="radio"
    />
    <span
      aria-hidden="true"
      class="c2"
    />
  </label>
</DocumentFragment>
`;

exports[`component: RadioButton should support margin space props 1`] = `
<DocumentFragment>
  .c1 {
  opacity: 0;
  height: 0;
  width: 0;
  position: absolute;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c2:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  cursor: pointer;
  margin: 16px;
}

.c0 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c0 input:checked ~ span:after {
  display: block;
}

.c0 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

<label
    class="c0"
    for="SPACE PROPS YEAH"
  >
    <input
      class="c1"
      id="SPACE PROPS YEAH"
      name="test"
      type="radio"
    />
    <span
      aria-hidden="true"
      class="c2"
    />
  </label>
</DocumentFragment>
`;
